# src/routes/user.ts
@@ -6,6 +6,31 @@ import createUserController from "../controllers/user/createUser";
 import updateUserController from "../controllers/user/updateUser";
 import patchUserController from "../controllers/user/patchUser";
 import deleteUserController from "../controllers/user/deleteUser";
+import { validateSchema } from "../middleware/validation.middleware";
+import { object, string } from "zod";
+
+const createUserSchema = object({
+  email: string().email(),
+  name: string().min(2),
+  username: string().min(2),
+  phone: string().min(10),
+  website: string().min(1),
+});
+
+const updateUserSchema = object({
+  email: string().email(),
+  name: string().min(2),
+  username: string().min(2),
+  phone: string().min(10),
+  website: string().min(1),
+});
+
+const patchUserSchema = object({
+  name: string().min(2).optional(),
+  email: string().email().optional(),
+  phone: string().min(10).optional(),
+  website: string().min(1).optional(),
+});
 
 const router = Router();
 
@@ -13,11 +38,11 @@ router.get("/", getAllUsersController);
 
 router.get("/:id", getUserByIdController);
 
-router.post("/", createUserController);
+router.post("/", validateSchema(createUserSchema), createUserController);
 
-router.put("/:id", updateUserController);
+router.put("/:id", validateSchema(updateUserSchema), updateUserController);
 
-router.patch("/:id", patchUserController);
+router.patch("/:id", validateSchema(patchUserSchema), patchUserController);
 
 router.delete("/:id", deleteUserController);
 
